--- a/assets/less/aroma.less
+++ b/assets/less/aroma.less
@@ -1,4 +1,14 @@
 out: ../css/aroma.css
+/*
+    Theme Name: Aroma
+    Theme URI: arkdezin.github.io/aroma
+    Author: Arkdezin
+    Author URI: arkdezin.github.io/portfolio
+    Description: Fragrence of life
+    Version: 0.0.1 alpha
+    License: GNU GENERAL PUBLIC LICENSE Version 2
+    Licence URI: https://www.gnu.org/licenses/gpl-2.0.html
+*/
 @charset "UTF-8";
 
 @import "din.less";
