--- a/assets/less/men.less
+++ b/assets/less/men.less
@@ -36,6 +36,24 @@
 @media only screen
   and (min-device-width: 768px) {
     #men, #women {
+      .btn-toggle {
+        img {
+          padding: 2px;
+          height: 70%;
+        }
+      }
+      h1 {
+        font-size: 2rem;
+      }
+      h4 {
+        font-size: 1.1rem;
+      }
+      h5 {
+        font-size: .825rem;
+      }
+      p {
+        font-size: .85rem;
+      }
       #menPerfume, #womenPerfume {
         img {
           height: 170px;
@@ -47,6 +65,24 @@
 @media only screen
   and (min-device-width: 1025px) {
     #men, #women {
+      .btn-toggle {
+        img {
+          padding: 5px;
+          height: 90%;
+        }
+      }
+      h1 {
+        font-size: 2.5rem;
+      }
+      h4 {
+        font-size: 1.5rem;
+      }
+      h5 {
+        font-size: 1.25rem;
+      }
+      p {
+        font-size: 1rem;
+      }
       #menPerfume, #womenPerfume {
         img {
           height: 290px;
